# unity-mcp-mixamo

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_EN.md  TESTING.md
Installer/Assets/MixamoMCP.Installer/Editor/: Installer.Manifest.cs  Installer.cs  MixamoMCP.Installer.asmdef  PackageExporter.cs  ServerDownloader.cs
Server/: README.md  build.py  mixamo-mcp.spec  pyproject.toml  run_tests.py
Server/src/: __init__.py
Server/src/mixamo_mcp/: __init__.py  client.py  keywords.py  models.py  server.py
Server/src/services/: __init__.py  manage_mixamo.py  mixamo_service.py
Server/tests/: __init__.py  conftest.py  test_keywords.py  test_manage_mixamo.py  test_mixamo_service.py
UnityPackage/: package.json
UnityPackage/Editor/: AnimatorBuilder.cs  MCPMixamo.Editor.asmdef  MixamoClient.cs  MixamoKeywords.cs  MixamoModels.cs  MixamoTestMenu.cs  Tool_Mixamo.cs
installer/: build_installer.py  setup.py
unity-helper/: README.md  package.json
unity-helper/Editor/: AnimatorBuilder.cs  MixamoHelper.Editor.asmdef  MixamoMcp.Editor.asmdef  MixamoMcpInstaller.cs  MixamoMcpWindow.cs  MixamoPostprocessor.cs
