[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mixamo-mcp"
version = "1.0.0"
description = "Standalone MCP server for Mixamo animations - works with any MCP client"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "HaD0Yun" }
]
keywords = ["mcp", "mixamo", "animation", "unity", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
sse = [
    "starlette>=0.40.0",
    "uvicorn>=0.30.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
mixamo-mcp = "mixamo_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mixamo_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
